<resources>
    <string name="app_name">TaskTimer2020</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="menumain_addTask">Add Task</string>
    <string name="menumain_showDurations">Durations Report</string>
    <string name="menumain_showAbout">About Task Timer</string>
    <string name="menumain_generate">Generate Test Data</string>
    <string name="no_task_message">No Task Selected</string>
    <string name="edit_button_description">Edit Details</string>
    <string name="delete_button_description">Button to delete a task</string>
    <string name="addedit_name_hint">Text name: required</string>
    <string name="addedit_description_hint">Task description (optional)</string>
    <string name="addedit_sort">Orders: sorts from low to high</string>
    <string name="addedit_save_text">Save</string>
    <string name="title_activity_add_edit">AddEditActivity</string>
    <string name="instructions_heading">Instructions</string>
    <string name="instructions">Here I am technically supposed to write all the instructions but I am lazy atm so peace till next time</string>
    <string name="ok">OKAY</string>
    <string name="cancel">CANCEL</string>
    <string name="deldiag_positive_caption">Delete</string>
    <string name="deldiag_message">Deleting will also delete all timing data associated with task id %1$d: %2$s.</string>
    <string name="cancelEditDiag_message">You have unsaved changes. Do you want to abandon your changes, or continue editing?</string>
    <string name="cancelEditDiag_positive_caption">Continue editing</string>
    <string name="cancelEditDiag_negative_caption">Abandon changes</string>
    <string name="about_copyright">Copyright \u00a9 2017 LearnProgramming.academy</string>

    <string name="about_weblink">Instructions available at</string>
    <string name="about_url">
<u>www.learnprogramming.academy</u>
</string>

    <string name="about_weblink_21">Instructions available at www.learnprogramming.academy</string>

    <string name="about_email">For support, email tasktimer@learnprogramming.academy</string>

    <string name="about_credits">
Icon derived from
<b>analog clock</b>
at openclipart.org by
<b>Anonymous</b>
</string>
    <string name="td_text_name">Task name</string>
    <string name="td_text_date">Date</string>

    <string name="td_text_duration">Duration</string>

    <string name="td_text_description">Description</string>
    <string name="rm_title_filter_day">Show day</string>

    <string name="rm_title_filter_week">Show week</string>

    <string name="rm_title_filter_date">Set report date</string>

    <string name="rm_title_delete">Delete old timings</string>
    <string name="title_activity_durations_report">Durations Report</string>
</resources>