<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_height="wrap_content" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView android:layout_height="wrap_content" android:layout_width="0dp" tools:text="@string/td_text_name" android:text="@string/td_text_name" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_weight="2" app:layout_constraintHorizontal_chainStyle="spread" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/td_start" android:textAlignment="viewStart" android:layout_marginStart="8dp" android:id="@+id/td_name"/>

    <TextView android:layout_height="wrap_content" android:layout_width="0dp" tools:text="@string/td_text_date" android:text="@string/td_text_date" app:layout_constraintHorizontal_weight="1" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/td_duration" android:textAlignment="viewStart" android:layout_marginStart="8dp" android:id="@+id/td_start" app:layout_constraintStart_toEndOf="@+id/td_name" app:layout_constraintBaseline_toBaselineOf="@+id/td_name"/>

    <TextView android:layout_height="wrap_content" android:layout_width="0dp" tools:text="@string/td_text_duration" app:layout_constraintHorizontal_weight="1" app:layout_constraintHorizontal_bias="0.5" android:textAlignment="viewStart" android:layout_marginStart="8dp" android:id="@+id/td_duration" app:layout_constraintStart_toEndOf="@+id/td_start" app:layout_constraintBaseline_toBaselineOf="@+id/td_start" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="4dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>